test/golden96/{helloCLE}.15676531368138664498.golden
INITIALPATH:7:22: error: [GHC-39999]
    • No instance for ‘Real String’ arising from a use of ‘formatAnyFractional’
    • In the first argument of ‘putStrLn’, namely ‘(formatAnyFractional (Upper Exponent) Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing (Just 6 :: Maybe Int) hello)’
      In the expression: putStrLn (formatAnyFractional (Upper Exponent) Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing (Just 6 :: Maybe Int) hello)
      In an equation for ‘main’: main = putStrLn (formatAnyFractional (Upper Exponent) Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing (Just 6 :: Maybe Int) hello)
  |
7 | main = putStrLn [fmt|{hello:E}|]
  |                      ^^^^^^^^^^^